--- a/test.vcxproj
+++ b/test.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{B1DE976D-A31B-45A9-8A03-678E5A19E930}</ProjectGuid>
     <RootNamespace>My3</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -98,7 +99,6 @@
   <ItemGroup>
     <ClInclude Include="a_crypto.h" />
     <ClInclude Include="a_tls.h" />
-    <ClInclude Include="server_test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
